# first-misread

./: .gitignore  CLAUDE.md  README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  pyproject.toml  styles.css  tsconfig.json  versions.json
docs/future/: terminal-rich-ui.md
extension/: manifest.json  package-lock.json  package.json  vite.config.js
extension/scripts/: convert-personas.js
extension/tests/: aggregator.test.js  analyzer.test.js  extractor.test.js  feedback.test.js  llm-client.test.js  models.test.js  pipeline.test.js  selector.test.js  simulator.test.js  storage.test.js
personas/core/: busy-reader.yaml  (+7 more)
scripts/: convert-personas.js
session-notes/: 2026-03-22-brainstorming-and-planning.md  2026-03-22-project-kickoff.md  2026-03-23-v1-implementation.md  2026-03-24-first-live-runs.md  2026-03-24-product-direction.md  2026-03-25-chrome-extension-build.md  2026-03-26-chrome-extension-full-implementation.md  2026-03-26-editorial-personas.md  2026-03-29-version-history.md  2026-03-31-obsidian-plugin-implementation.md  2026-04-13-persona-overhaul.md  INDEX.md
skill/: SKILL.md
tests/: aggregator.test.js  format-detector.test.js  llm-client.test.js  pipeline.test.js  selector.test.js  strengths.test.js  test_aggregator.py  test_analyzer.py  test_claude_client.py  test_cli.py  test_differ.py  test_history.py  test_interpreter.py  test_models.py  test_output.py  test_persona_yaml_validation.py  test_personas.py  test_pipeline.py  test_revision_flow.py  test_rewriter.py  test_selector.py  test_simulator.py  test_strengths.py
(+81 files in other folders)
