[project]
name = "first-misread"
version = "0.1.0"
description = "Behavioral reading simulation for written content"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
